--- a/Project_4.megaline/Proye4_PaketPrabayarMegaline.ipynb
+++ b/Project_4.megaline/Proye4_PaketPrabayarMegaline.ipynb
@@ -1277,6 +1277,83 @@
     "\n",
     "* dataset `data_plans` sudah bersih, tanpa nilai hilang dan tanpa duplikat."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kesimpulan dan Langkah-Langkah Selanjutnya\n",
+    "\n",
+    "#### **Nilai yang Hilang**\n",
+    "\n",
+    "Setiap baris dalam tabel menyimpan data terkait harga sebuah mobil yang telah terjual. Sejumlah kolom menyimpan data yang mendeskripsikan mobil itu sendiri: tahun produksi, merk mobil, kondisi mobil, silinder mesin, tipe gas, jarak tembuh mobil, tipe transisi, tipe mobil, warna mobil, dan tipe kendaraan yang memiliki penggerak 4 roda. Sisanya menyimpan data terkait informasi mobil terjual: tanggal iklan ditayangkan serta hari iklan ditayangkan hingga dihapus.\n",
+    "\n",
+    "Jelas bahwa data yang kita miliki cukup untuk menguji hipotesis. Meski demikian, kita memiliki nilai-nilai yang hilang.\n",
+    "\n",
+    "* Nilai yang hilang dalam kolom `cylinders` dan `is_4wd` tidak begitu penting karena nilai yang hilang tersebut tidak berpengaruh terhadap penelitian. Cukup menggantinya dengan penanda yang jelas. \n",
+    "* Nilai yang hilang dalam kolom `model_year`, `odometer`, dan `paint_color` dapat memengaruhi perbandingan harga sebuah kendaraan. Oleh sebab itu perlu dilakukan evaluasi mengenai seberapa besar nilai yang hilang dapat memengaruhi perhitungan.\n",
+    "\n",
+    "Alasan mengapa data tersebut hilang sangatlah berguna untuk mempelajari dan mencoba memperbaikinya namun sayangnya, kita belum memiliki kesempatan tersebut dalam proyek ini.\n",
+    "\n",
+    "#### **Gaya Penulisan**\n",
+    "\n",
+    "Setelah mengatasi nilai-nilai yang hilang, langkah selanjutnya yaitu merapihkan data:\n",
+    "\n",
+    "* Mengubah nilai pada kolom `model_year` menjadi integer.\n",
+    "* Mengganti nilai pada kolom `condition` menjadi skala numerik.\n",
+    "* Mengubah format dtype pada kolom `date_posted` menjadi format datetime64.\n",
+    "* Akan lebih baik apabila terdapat data tentang hari dalam minggu, bulan, dan tahun iklan ditayangkan.\n",
+    "* Menambahkan kolom baru tentang usia kendaraan (dalam tahun) ketika iklan ditayangkan dan jarak tempuh rata-rata kendaraan per tahun.\n",
+    "\n",
+    "#### **Duplikat**\n",
+    "\n",
+    "Selanjutnya memeriksa duplikat pada data. Namun, pada dataset ini tidak memiliki data duplikat pada data. Sehingga tidak perlu dilakukan analisis duplikat awal.\n",
+    "\n",
+    "#### **Anomali Data**\n",
+    "\n",
+    "Setelah memeriksa data duplikat perlu memepertimbangkan data anomali berikut, karena data tersebut mempengaruhi analisis penelitian.\n",
+    "\n",
+    "* Pada kolom `price` terdapat nilai harga mobil yang tidak wajar, yaitu 1.000000.\n",
+    "* Pada kolom `transmission` dan `type` terdapat nilai **other** yang seharusnya diketahui karena merupakan data yang mendeskripsikan mobil itu sendiri."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Langkah 2. Siapkan datanya\n",
+    "\n",
+    "Konversikan data menjadi tipe data yang dibutuhkan\n",
+    "Temukan dan eliminasi kesalahan pada data\n",
+    "Jelaskan kesalahan yang Anda temukan dan bagaimana Anda mengeliminasinya. Catatan: terdapat sejumlah panggilan yang memiliki durasi 0,0 menit. Ini mungkin adalah panggilan tak terjawab. Terserah Anda apakah Anda akan melakukan eliminasi untuk nilai-nilai ini atau tidak; pertimbangkanlah seberapa besar ketidakhadiran mereka akan memengaruhi hasil analisis Anda.\n",
+    "Untuk setiap pengguna, temukan:\n",
+    "Jumlah panggilan yang dilakukan dan menit yang digunakan per bulan\n",
+    "Jumlah SMS yang dikirim per bulan\n",
+    "Volume data per bulan\n",
+    "Pendapatan bulanan dari setiap pengguna (kurangi batas paket gratis dari jumlah total panggilan, SMS, dan data; kalikan hasilnya dengan nilai paket telepon; tambahkan biaya bulanan tergantung pada paket teleponnya)\n",
+    "\n",
+    "Langkah 3. Analisis datanya\n",
+    "\n",
+    "Deskripsikan perilaku konsumen. Temukan menit, pesan, dan volume penggunaan data seluler yang dibutuhkan pengguna setiap paket per bulan. Hitung rata-rata, varians, dan standar deviasinya. Buatlah histogram. Deskripsikan distribusinya.\n",
+    "\n",
+    "Langkah 4. Uji hipotesisnya\n",
+    "\n",
+    "Rata-rata pendapatan dari pengguna paket telepon Ultimate dan Surf berbeda.\n",
+    "Rata-rata pendapatan dari pengguna di wilayah NY-NJ berbeda dengan pendapatan pengguna dari wilayah lain.\n",
+    "Anda dapat menentukan seberapa besar nilai \"alpha\" yang akan digunakan.\n",
+    "Jelaskan:\n",
+    "Bagaimana Anda merumuskan hipotesis nol dan hipotesis alternatif.\n",
+    "Kriteria apa yang Anda gunakan untuk menguji hipotesis dan alasan penggunaannya."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ingat! Megaline membulatkan detik ke menit, serta megabita ke gigabita. Untuk panggilan, setiap panggilan individual dibulatkan ke atas: bahkan jika suatu panggilan berlangsung hanya satu detik, ia akan dihitung sebagai satu menit. Untuk lalu lintas web, setiap sesi web individual tidak dibulatkan ke atas. Akan tetapi, total untuk sebulan dibulatkan ke atas. Jika seorang pengguna menghabiskan 1025 megabita bulan ini, maka ia akan dikenai biaya untuk 2 gigabita."
+   ]
   }
  ],
  "metadata": {
