--- a/Project_3.vehicles.us/Proyek3_FaktorApakahyangMenjualSebuahMobil.ipynb
+++ b/Project_3.vehicles.us/Proyek3_FaktorApakahyangMenjualSebuahMobil.ipynb
@@ -1152,14 +1152,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Kesimpulan sementara:**\n",
     "\n",
-    "* Kolom `price` terdapat nilai yang tidak wajar, yaitu min price adalah 1.000000 sehingga perlu dianalisis.\n",
-    "* Kolom `transmission` dan `type` terdapat nilai other yang merupakan anomali sehingga perlu dianalisis lebih dalam.\n",
-    "* Dataset tidak memiliki duplikat pada datanya.\n"
+    "* Kolom `price` terdapat nilai yang tidak wajar, yaitu min price adalah 1.000000 sehingga perlu dianalisis.\n"
    ]
   },
   {
